--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/jatihusen/Basic-Java-Maven</url>
+      <url>https://maven.pkg.github.com/Ago-oyu/mkpl-w13</url>
     </repository>
   </distributionManagement>
   
